--- a/src/pages/detail/style.less
+++ b/src/pages/detail/style.less
@@ -59,22 +59,22 @@
 		&__Title {
 			color: #31333f;
 			font-size: 1.6rem;
-			.icon("/src/assets/img/plugin_img.png", 23px, 21px);	
+			.icon("~assets/img/plugin_img.png", 23px, 21px);	
 		}
 		&__PluginMsg {
-			.icon("/src/assets/img/plugin_msg.png", 18px, 19px);
+			.icon("~assets/img/plugin_msg.png", 18px, 19px);
 		}
 		&__Developer {
-			.icon("/src/assets/img/plugin_developer.png", 23px, 24px);
+			.icon("~assets/img/plugin_developer.png", 23px, 24px);
 		}
 		&__PublishDate {
-			.icon("/src/assets/img/plugin_date.png", 23px, 22px);
+			.icon("~assets/img/plugin_date.png", 23px, 22px);
 		}
 		&__Type {
-			.icon("/src/assets/img/plugin_type.png", 24px, 21px);
+			.icon("~assets/img/plugin_type.png", 24px, 21px);
 		}
 		&__BrightSpot {
-			.icon("/src/assets/img/plugin_brightSpot.png", 21px, 24px);
+			.icon("~assets/img/plugin_brightSpot.png", 21px, 24px);
 		}
 		&__Con {
 			overflow: auto;
@@ -91,7 +91,7 @@
 
 }
 
-.icon(@url: "/src/assets/img/plugin_img.png", @width: 23px, @height: 21px) {
+.icon(@url: "~assets/img/plugin_img.png", @width: 23px, @height: 21px) {
 	display: inline-block;
 	position: relative;
 	height: @height;
