--- a/src/pages/home/style.less
+++ b/src/pages/home/style.less
@@ -13,10 +13,10 @@
 			margin-top: 1rem;
 			margin-bottom: 1rem;
 			.hotIcon {
-				.icon("/src/assets/img/hot.png");
+				.icon("~assets/img/hot.png");
 			}
 			.newIcon {
-				.icon("/src/assets/img/new.png");
+				.icon("~assets/img/new.png");
 			}
 		}
 		&__Con {
