--- a/src/pages/style.less
+++ b/src/pages/style.less
@@ -96,7 +96,7 @@ html, body {
 	min-height: 50rem;
 }
 
-.icon(@url: "/src/assets/img/home.png") {
+.icon(@url: "~assets/img/home.png") {
 	//&:after {
 		display: inline-block;
 		position: relative;
